# zer0one-cinema

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-worker.yml  ci.yml
docker/: Dockerfile.runpod  blender_bootstrap.py  runpod_entry.sh
docs/: architecture.md  roadmap.md
docs/research/: blender-api-limits.md  cinema-look-analysis.md  opensource-ecosystem.md  pbr-auto-fix-heuristics.md  preflight-frame-qa.md  state-of-art.md  wheel-detection-methods.md
scripts/: build-worker-image.sh  build_preflight_fixtures.py  debug_candidates.py  debug_wheel_stages.py  render_rs6_hero_reveal.py  render_rs6_hero_reveal_v2.py  render_rs6_hero_reveal_v3.py  run_zocinema.py
test-outputs/: kenney_monster_truck_prepped.blend  kenney_monster_truck_report.json  kenney_sedan_prepped.blend  kenney_sedan_report.json
tests/: test_smoke.py
tests/fixtures/preflight/: center_locked.blend  cutoff.blend  ground_edge.blend  unfixable.blend
tests/glb_fixtures/: README.md
tests/integration/: test_model_prep_pipeline.py  test_preflight_pipeline.py
tests/unit/: test_bbox_utils.py  test_body_group.py  test_caliper_and_rolling.py  test_context.py  test_ground_anchor.py  test_material_sanitize.py  test_origin_fix.py  test_preflight_fix_rules.py  test_preflight_frame_analyzer.py  test_verify_gates.py  test_verify_sequence.py  test_wheel_detect.py
zer0one_cinema/: __init__.py  context.py
zer0one_cinema/cli/: __init__.py  main.py  model_prep.py  preflight.py  verify.py
zer0one_cinema/io/: __init__.py  bpy_adapters.py  glb_loader.py
zer0one_cinema/model_prep/: __init__.py  bbox_utils.py  body_group.py  caliper_filter.py  ground_anchor.py  material_sanitize.py  origin_fix.py  rolling_axis.py  wheel_detect.py
zer0one_cinema/preflight/: __init__.py  bpy_adapters.py  fix_rules.py  frame_analyzer.py  loop.py  report.py
zer0one_cinema/verify/: __init__.py  gates.py  reference.py  report.py  sequence.py  thresholds.py
