[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zer0one-cinema"
version = "0.1.1"
description = "Deterministic cinema-grade rendering automation for Blender: GLB in, movie out."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ZER0ONELAB", email = "michael@zer0one.codes" }]
requires-python = ">=3.11"
keywords = ["blender", "rendering", "3d", "cinema", "automation", "cycles", "cli"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: 3D Rendering",
]
dependencies = [
  "numpy>=1.26",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "click>=8.1",
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-pyyaml",
  "types-pillow",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]
preflight = [
  "opencv-contrib-python>=4.10",
  "scikit-image>=0.24",
]

[project.scripts]
zocinema = "zer0one_cinema.cli:main"

[project.urls]
Homepage = "https://zer0onelab.com/cinema"
Repository = "https://github.com/0xxCool/zer0one-cinema"
Issues = "https://github.com/0xxCool/zer0one-cinema/issues"

[tool.setuptools.packages.find]
include = ["zer0one_cinema*"]

[tool.setuptools.package-data]
zer0one_cinema = ["presets/**/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4", "PL"]
ignore = ["E501", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "B017", "PLC0415"]  # assertions may use magic values + blind exceptions + local imports
"zer0one_cinema/model_prep/wheel_detect.py" = [
  "PLC0415",  # local sklearn import is intentional (lazy)
  "PLR2004",  # inline algorithm constants (min verts, half-of-2, etc.) — magic-value rule is noise here
]
"zer0one_cinema/model_prep/material_sanitize.py" = [
  "PLR0911",  # 3-pass classifier legitimately has many early-return branches
  "PLR2004",  # texture-signal thresholds are domain-specific, documented in research doc
]
"zer0one_cinema/model_prep/body_group.py" = [
  "PLR0912",  # multi-stage filter (wheel-filter → env-filter → aggregate) reads clearer inline
  "PLR2004",  # wheelbase-count threshold (2) is documented in-code
]
"zer0one_cinema/io/glb_loader.py" = [
  "PLC0415",  # deferred bpy import is intentional (keep core pure-python-importable)
]
"zer0one_cinema/cli/model_prep.py" = [
  "PLC0415",  # deferred bpy + adapter imports are intentional (CLI must import without bpy)
]
"zer0one_cinema/cli/preflight.py" = [
  "PLC0415",  # deferred bpy + adapter imports are intentional (CLI must import without bpy)
]
"zer0one_cinema/cli/verify.py" = [
  "PLC0415",  # deferred cv2/skimage import — verify runs without those if only numpy gates requested
]
"zer0one_cinema/preflight/frame_analyzer.py" = [
  "PLC0415",  # cv2 import is deferred so `import preflight` doesn't hard-fail without extras
  "PLR2004",  # threshold constants (NDC margin, sharpness cutoff etc.) are algorithm-inline
]
"zer0one_cinema/preflight/fix_rules.py" = [
  "PLR2004",  # geometric constants (ground scale factor 1.5, DoF fstop clamp 4.0) are algorithm-inline
]
"zer0one_cinema/preflight/bpy_adapters.py" = [
  "PLC0415",  # bpy + bpy_extras + mathutils imports deferred behind Blender-only surface
]
"zer0one_cinema/verify/gates.py" = [
  "PLR2004",  # gate thresholds (0.7 luminance, 0.5 mask etc.) are the domain semantics
]
"zer0one_cinema/verify/sequence.py" = [
  "PLC0415",  # cv2 import deferred (optical-flow gate requires opencv but sequence.py may load without)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*", "skimage.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers --cov=zer0one_cinema --cov-report=term-missing"
